tests/machine/x/c/record_assign.error
line: 0
error: cc error: exit status 1
/workspace/mochi/tests/machine/x/c/record_assign.c: In function ‘inc’:
/workspace/mochi/tests/machine/x/c/record_assign.c:10:24: error: ‘c’ is a pointer; did you mean to use ‘->’?
   10 | int inc(Counter *c) { c.n = c.n + 1; }
      |                        ^
      |                        ->
/workspace/mochi/tests/machine/x/c/record_assign.c:10:30: error: ‘c’ is a pointer; did you mean to use ‘->’?
   10 | int inc(Counter *c) { c.n = c.n + 1; }
      |                              ^
      |                              ->

   1: #include <stdio.h>
